--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,6 +20,7 @@
       <div class="uploaded"></div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="app.js"></script>
   </body>
 </html>
