--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,7 +12,7 @@
 
       <form id="form" enctype="multipart/form-data">
         <i class="bx bx-upload"></i>
-        <input type="file" id="file" name="file" hidden />
+        <input type="file" id="file" accept="image/*" name="file" hidden />
       </form>
 
       <div class="upload-file"></div>
